--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,3 +1,831 @@
+*{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+@font-face {
+    font-family: "ComicN-R";
+    src: url(./font/ComicNeue-Regular.ttf);
+}
+
+@font-face {
+    font-family: "ComicN-B";
+    src: url(./font/ComicNeue-Bold.ttf);
+}
+
+@font-face {
+    font-family: "Cinzel-B";
+    src: url(./font/CinzelDecorative-Bold.ttf);
+}
+
+
+@font-face {
+    font-family: "Cinzel-R";
+    src: url(./font/CinzelDecorative-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Cinzel-BL";
+    src: url(./font/CinzelDecorative-Black.ttf);
+}
+
+body::-webkit-scrollbar{
+    background: rgb(0, 0, 0);
+    width: 10px;
+  }
+  
+  body::-webkit-scrollbar-thumb{
+    background: #bdf5be;
+  }
+  
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #bdf5be #2c2c2c;
+  }
+
+  ::selection {
+    background-color: #bdf5be;
+    color: #545454; 
+}
+
+::-moz-selection {
+    background-color: #bdf5be;
+    color: #545454;
+}
+  
+  
+  html {
+    scroll-behavior: smooth;
+  }
+
+header{
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    img{
+        width: 120px;
+    }
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: fixed;
+    z-index: 1000;
+}
+
+nav{
+    width: 45%;
+    ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        a{
+            text-decoration: none;
+            color: #545454;
+            font-family: "ComicN-B";
+            font-size: 18px;
+        }
+        li{
+            list-style: none;
+            position: relative;
+        }
+    }
+}
+
+
+.nav_right{
+    width: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    ul{
+        width: 95%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        a{
+            text-decoration: none;
+            color: #545454;
+            font-family: "ComicN-B";
+            font-size: 18px;
+        }
+        li{
+            list-style: none;
+            position: relative;
+        }
+    }
+}
+
+
+nav ul li::after,
+.nav_right ul li::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #bdf5be;
+    bottom: -5px;
+    left: 0;
+    transition: width 0.3s ease;
+}
+
+nav ul li:hover::after,
+.nav_right ul li:hover::after {
+    width: 100%;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+}
+
+.close-icon{
+    display: none;
+}
+
+nav ul li.mobile-account {
+    display: none;
+}
+
+
+/* main */
+
 h1{
-    color: red
+    font-size: 24px;
+}
+
+
+
+main{
+    height: 100%;
+    background-color: #bdf5be;
+}
+
+
+.hero{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Cinzel-R";
+    color: white;
+}
+
+#about_hero{
+    background-image: url("./media/feriavero.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    h1{
+        background-color: #bdf5be;
+        color: black;
+    }
+}
+
+#contact_hero{
+    background-image: url("./media/image1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    h1{
+        color: black;
+    }
+}
+
+#index_hero{
+    background-image: url("./media/port1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+}
+
+#how_to_buy_hero{
+    background-image: url("./media/image9.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+}
+
+
+#agendas_hero{
+    background-image: url("./media/port1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+}
+
+
+#books_hero{
+    background-image: url("./media/image7.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    h1{
+        background-color: #bdf5be;
+        color: black;
+    }
+}
+
+
+.whatsapp{
+    background-color: #25d366;
+    cursor: pointer;
+    position: fixed; 
+  bottom: 0;
+  right: 0;
+  margin: 25px; 
+  color: #fff; 
+  padding: 10px; 
+  border-radius: 30px;
+  z-index: 9999;
+}
+
+.linktow{
+    z-index: 9999;
+    color: white;
+    text-decoration: none;
+}
+
+
+/* index */
+
+.index_first{
+    height: 85vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    justify-items: center;
+    background: linear-gradient(to right, #bdf5be 55%, white 0%);
+}
+
+.index_first_text{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    width: 70%;
+    h2{
+        font-family: "ComicN-B";
+        font-size: 28px;
+        padding-bottom: 15px;
+    }
+    p{
+        font-family: "ComicN-R";
+        text-align: justify;
+    }
+}
+
+.index_first_text_button{
+    margin-top: 15px;
+    button{
+        width: 150px;
+        background-color: white;
+        font-family: "ComicN-B";
+        padding: 8px;
+        border-radius: 10px;
+        cursor: pointer;
+        border: none;
+        margin-right: 10px;
+    }
+}
+
+.index_first_btn:hover{
+    transition: .5s;
+    background-color: #545454;
+    color: white;
+}
+
+.index_first_image{
+    img{
+        width: 55%;
+        height: 55%;
+        border-radius: 10px;
+    }
+}
+
+.index_custom_product{
+    height: 100vh;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    align-items: center;
+    justify-items: center;
+}
+
+#custom_left{
+    border: 1px solid red;
+}
+
+
+.index_third_section{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-items: center;
+    height: 40vh;
+    gap: 20px;
+    h3{
+        font-family: "ComicN-B";
+        padding-bottom: 10px;
+        font-size: 20px;
+    }
+    p{
+        padding-bottom: 10px;
+        font-family: "ComicN-R";
+    }
+}
+
+
+.index_third_section_item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+/* About */
+.about_tell{
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    background: linear-gradient(to right, #e9e9e9 55%, #bdf5be 0%);
+    .about_tell_text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        p{
+            font-family: "ComicN-R";
+            color: #000;
+            text-align: justify;
+            width: 80%;
+        }
+        h2{
+            color: #000;
+            text-align: center;
+            padding-bottom: 30px;
+            font-family: "ComicN-B";
+            font-size: 25px;
+        }
+        div{
+            margin-bottom: 50px;
+        }
+    }
+}
+
+.about_tell_video{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    overflow: hidden;
+}
+
+#video{
+    height: 72vh;
+    width: 60%; 
+    object-fit: cover; 
+}
+
+
+
+.about_me{
+    background-color: white;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-items: center;
+    h3{
+        font-family: "ComicN-B";
+        text-align: center;
+        padding-bottom: 15px;
+        font-size: 25px;
+    }
+    p{
+        margin-left: 10%;
+        font-family: "ComicN-R";
+        text-align: justify;
+    }
+    
+    .photo{
+        height: 200px;
+        width: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    img{
+        object-fit: cover;
+        height: 200px;
+        width: 200px;
+        border-radius: 100px;
+    }
+}
+
+
+.photo{
+    height: 200px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* contact */
+.contact_section{
+    height: 100vh;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    justify-items: center;
+    h2{
+        font-family: "ComicN-B";
+    }
+    p{
+        font-family: "ComicN-R";
+    }
+}
+
+.contact_text{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact_text_content{
+    width: 55%;
+    height: 55%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    h2{
+        font-size: 30px;
+        padding-bottom: 20px;
+    }
+    p{
+        padding-bottom: 30px;
+    }
+    button{
+        width: 50px;    
+        height: 50px;   
+        border-radius: 50%; 
+        padding: 10px;   
+        border: none;   
+        display: flex;  
+        align-items: center;    
+        justify-content: center; 
+        background-color: #bdf5be;
+        cursor: pointer;
+    }
+    a{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+#contact_ig{
+    fill: #545454;
+}
+
+.contact_btn_instagram:hover{
+    #contact_ig{
+        transition: .5s;
+        fill: white;
+    }
+    transition: .5s;
+    background-color: #a5e9a6;
+}
+
+.contact_form{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #bdf5be;
+        width: 55%;
+        height: 75%;
+        border-radius: 10px;
+        gap: 20px;
+        font-family: "ComicN-R";
+        button{
+            width: 75%;
+            height: 30px;
+            font-family: "ComicN-B";
+            border: none;
+            background-color: #545454;
+            color: #bdf5be;
+            border-radius: 10px;
+            font-size: 17px;
+            cursor: pointer;
+        }
+    }
+    input{
+        height: 30px;
+        width: 75%;
+        outline: none;
+        border-radius: 10px;
+        border: none;
+        font-family: "ComicN-B";
+        padding-left: 10px;
+    }
+    textarea{
+        outline: none;
+        border-radius: 10px;
+        border: none;
+        font-family: "ComicN-B";
+        padding-left: 10px;
+        padding-top: 5px;
+        width: 75%;
+        height: 35%;
+    }
+    color: #545454;
+}
+
+.contact_btn:hover{
+    transition: .5s;
+    background-color: #2c2c2c;
+}
+
+/* how-to-buy */
+
+.how_to_buy_text{
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    h2{
+        font-family: "ComicN-B";
+        padding-bottom: 30px;
+    }
+    p{
+        font-family: "ComicN-R";
+    }
+}
+
+.how_to_buy_steps{
+    border: 1px solid red;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    gap: 30px;
+}
+
+.step{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    border: 1px solid gray;
+    h3{
+        padding-bottom: 10px;
+    }
+    h4{
+        padding-bottom: 10px;
+    }
+}
+
+.footer_center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h3{
+        padding-bottom: 25px;
+        font-family: "Cinzel-R";
+        color: #bdf5be;
+    }
+}
+
+footer{
+    width: 100%;
+    height: 200px;
+    background-color: #545454;
+    section{
+        height: 80%;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-items: center;
+        align-items: center;
+        button{
+            width: 50px;    
+            height: 50px;   
+            border-radius: 50%; 
+            border: none;   
+            display: flex;  
+            align-items: center;    
+            justify-content: center; 
+            background-color: #bdf5be;
+            cursor: pointer;
+            a{
+                height: 100%;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+    img{
+        width: 120px;
+    }
+    
+}
+
+ul{
+    gap: 20px;
+}
+
+.footer_right{
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.footer_ul_right{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    font-family: "ComicN-R";
+    list-style: none;
+    gap: 10px;
+    a{
+    color: #bdf5be;
+    text-decoration: none;
+    }
+}
+
+.author{
+    width: 100%;
+    text-align: center;
+    font-size: 15px;
+    font-family: "Cinzel-R";
+}
+
+
+/* Responsive para celular */
+@media (max-width: 768px) {
+    /* NAVBAR */
+    .menu-toggle {
+        display: block;
+        background: transparent;
+        border: 0;
+        z-index: 999;
+    }
+
+    .menu-toggle.active .menu-icon {
+        display: none;
+    }
+
+    .menu-toggle.active .close-icon {
+        display: block;
+    }
+
+
+    .nav_logo{
+        order: 1;
+    }
+
+    nav {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 50%;
+        transition: right 0.3s ease;
+        height: 100%;
+        background-color: white;
+        padding: 20px;
+    }
+
+    nav.active {
+        display: block;
+    }
+
+    nav ul {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .nav_right {
+        width: auto;
+        order: 2;
+    }
+
+    .nav_right ul li:first-child {
+        display: none;
+    }
+
+    nav ul li.mobile-account {
+        display: block;
+    }
+
+    /* FOOTER   */
+    footer{
+        width: 100%;
+        height: auto;
+        padding: 20px 0;
+        background-color: #545454;
+        section{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); 
+            grid-template-rows: auto 1fr; 
+        }
+    }
+    
+    
+    .footer_left{
+        grid-column: 1 / 2; 
+        grid-row: 2;
+    }
+
+    .footer_right{
+        grid-column: 2 / 3; 
+        grid-row: 2;
+    }
+
+    .footer_center{
+        grid-column: 1 / -1; 
+        grid-row: 1;
+        h3{
+            font-size: 15px;
+        }
+    }
+    
+    .author{
+        margin-top: 25px;
+        font-size: 12px;
+    }
+    
+    /* CONTACT */
+    .contact_section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .contact_text_content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .contact_form{
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        form{
+            height: 90%;
+            width: 90%;
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+    }
+}
+
+
+#custom_left{
+    border: 1px solid red;
 }
