--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,10 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Tell Cuadernos</title>
+    <link rel="shortcut icon" href="/media/manzana.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Bienvenido a Tell</h1>
+    <header>
+        <div class="nav_logo">
+            <a href="/">
+                <img src="/media/logo.png" alt="Logo Tell Cuadernos">
+            </a>
+        </div>
+
+        <button class="menu-toggle">
+            <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#545454" viewBox="0 0 16 16">
+                <path d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+            <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#545454" viewBox="0 0 16 16">
+                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+            </svg>
+        </button>
+
+        <nav>
+            <ul>
+                <li><a href="./agendas">Agendas</a></li>
+                <li><a href="./books">Cuadernos</a></li>
+                <li><a href="./how-to-buy">Como comprar</a></li>
+                <li><a href="/about">Nosotros</a></li>
+                <li><a href="./contact">Contacto</a></li>
+                <li class="mobile-account"><a href="./account">Cuenta</a></li>
+            </ul>
+        </nav>
+
+        <div class="nav_right">
+            <ul>
+                <li><a href="./account">Cuenta</a></li>
+                <li>
+                    <a href="./cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#545454" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                          </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+        <div>
+            <div class="whatsapp">
+            <a href="https://api.whatsapp.com/send?phone=5403415621920" target="_blank" class='linktow' title='Hablemos por WhatsApp!'>
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+      <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+    </svg>
+    </a>
+            </div>
+        </div>
+        <section class="hero" id="index_hero">
+            <h1>Tu cuaderno artesanal</h1>
+        </section>
+
+        <section class="index_first">
+            <div class="index_first_text">
+                <h2>Comenza personalizando tu diario!</h2>
+                <p>En Tell entendemos lo importante que es para vos poder personalizar tu propia agenda o cuaderno, por eso creamos una manera para que puedas meterte a detalle en el.</p>
+                <div class="index_first_text_button">
+                    <button class="index_first_btn">
+                        Crear agenda
+                    </button>
+                    <button class="index_first_btn">
+                        Crear cuaderno
+                    </button>
+                </div>
+            </div>
+            <div class="index_first_image">
+                <img src="./media/cuadernos.jpg" alt="Cuadernos apilados" data-aos="fade-left"
+                data-aos-anchor="#example-anchor"
+                data-aos-offset="800"
+                data-aos-duration="800">
+            </div>
+        </section>
+
+        <section class="index_custom_product">
+            <div class="index_custom_left" id="custom_left">
+                <!-- Insertar con js -->
+            </div>
+            <div class="index_custom_right">
+                <!-- Insertar con js -->
+            </div>
+        </section>
+
+        <section class="index_third_section">
+            <div class="index_third_section_item" data-aos="zoom-in-right">
+                <h3>Envios</h3>
+                <p>Hacemos envios a todo el país</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                    <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+                  </svg>
+            </div>
+            <div class="index_third_section_item" data-aos="zoom-in-right">
+                <h3>Entrega</h3>
+                <p>El tiempo de confección del cuaderno puede durar entre 5-7 días.</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+                  </svg>
+            </div>
+            <div class="index_third_section_item" data-aos="zoom-in-right">
+                <h3>Pago</h3>
+                <p>Trabajamos con Mercado Pago</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                    <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                  </svg>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <section>
+            <div>
+                <a href="/">
+                    <img src="/media/logo.png" alt="Logo Tell Cuadernos">
+                </a>
+            </div>
+    
+            <div class="footer_center">
+                <h3>Donde tus ideas cobran vida</h3>
+                <button class="contact_btn_instagram">
+                    <a href="https://www.instagram.com/tell.cuadernos/" target="_blank">
+                        <svg id="contact_ig" xmlns="http://www.w3.org/2000/svg" width="25" height="25" class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                          </svg>
+                    </a>
+                </button>
+            </div>
+    
+            <div class="footer_right">
+                <ul class="footer_ul_right">
+                    <li><a href="/agendas">Agendas</a></li>
+                    <li><a href="/books">Cuadernos</a></li>
+                    <li><a href="/how-to-buy">Como comprar</a></li>
+                    <li><a href="/about">Nosotros</a></li>
+                    <li><a href="/contact">Contacto</a></li>
+                </ul>
+            </div>
+        </section>
+        <div class="author">
+            <small>Tell cuadernos ©, todos los derechos reservados | Desarrollado por Gonzalo Molina</small>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+    <script src="index.js"></script>
 </body>
 </html>
