--- a/src/views/index.html
+++ b/src/views/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="index_third_section_item" data-aos="zoom-in-right">
                 <h3>Entrega</h3>
-                <p>El tiempo de confección del cuaderno puede durar entre 5-7 días.</p>
+                <p>El tiempo de entrega del cuaderno puede durar entre 5-7 días. La confección es 100% a mano.</p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
                     <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
                     <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
