--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -875,3 +875,10 @@ ul{
     justify-content: center;
     align-items: center;
 }
+
+.admin{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
