--- a/src/views/index.html
+++ b/src/views/index.html
@@ -89,7 +89,7 @@
             <div class="index_custom_left" id="custom_left">
                 <!-- Insertar con js -->
             </div>
-            <div class="index_custom_right">
+            <div class="index_custom_right" id="custom_right">
                 <!-- Insertar con js -->
             </div>
         </section>
