--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,8 +27,8 @@
 
         <nav>
             <ul>
-                <li><a href="./agendas">Agendas</a></li>
-                <li><a href="./books">Cuadernos</a></li>
+                <li><a href="./agendas">Productos</a></li>
+                <li><a href="./books">Personalizar</a></li>
                 <li><a href="./how-to-buy">Como comprar</a></li>
                 <li><a href="/about">Nosotros</a></li>
                 <li><a href="./contact">Contacto</a></li>
@@ -70,10 +70,7 @@
                 <p>En Tell entendemos lo importante que es para vos poder personalizar tu propia agenda o cuaderno, por eso creamos una manera para que puedas meterte a detalle en el.</p>
                 <div class="index_first_text_button">
                     <button class="index_first_btn">
-                        Crear agenda
-                    </button>
-                    <button class="index_first_btn">
-                        Crear cuaderno
+                        Ir a personalizar
                     </button>
                 </div>
             </div>
