--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,8 +27,8 @@
 
         <nav>
             <ul>
-                <li><a href="./agendas">Productos</a></li>
-                <li><a href="./books">Personalizar</a></li>
+                <li><a href="./products">Productos</a></li>
+                <li><a href="./custom">Personalizar</a></li>
                 <li><a href="./how-to-buy">Como comprar</a></li>
                 <li><a href="/about">Nosotros</a></li>
                 <li><a href="./contact">Contacto</a></li>
@@ -69,9 +69,12 @@
                 <h2>Comenza personalizando tu diario!</h2>
                 <p>En Tell entendemos lo importante que es para vos poder personalizar tu propia agenda o cuaderno, por eso creamos una manera para que puedas meterte a detalle en el.</p>
                 <div class="index_first_text_button">
-                    <button class="index_first_btn">
-                        Ir a personalizar
-                    </button>
+                    <a href="./custom">
+                        <button class="index_first_btn">
+                            Ir a personalizar
+                        </button>
+                    </a>
+
                 </div>
             </div>
             <div class="index_first_image">
