fetch products in products page

--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -16,8 +16,8 @@
 
         <nav>
             <ul>
-                <li><a href="./agendas">Agendas</a></li>
-                <li><a href="./books">Cuadernos</a></li>
+                <li><a href="./products">Productos</a></li>
+                <li><a href="./custom">Personalizar</a></li>
                 <li><a href="./how-to-buy">Como comprar</a></li>
                 <li><a href="/about">Nosotros</a></li>
                 <li><a href="./contact">Contacto</a></li>
