--- a/src/views/products.hbs
+++ b/src/views/products.hbs
@@ -11,3 +11,20 @@
     <section class="hero" id="about_hero">
         <h1>Donde tus ideas cobran vida</h1>
     </section>
+
+     <div class="products-header">
+        <h2 id="filter-title">Todos los productos</h2>
+        <input type="text" id="search-bar" placeholder="Buscar productos..." />
+    </div>
+
+    <section class="products_container" id="products_container">
+        <div class="filters_container" id="filters_container">
+
+        </div>
+        <div class="items_container" id="items_container">
+
+        </div>
+
+    </section>
+
+<script src="products.js"></script>
