--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -777,6 +777,46 @@ ul{
     font-family: "Cinzel-R";
 }
 
+.products_container{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    height: 100vh;
+    width: 100%;
+}
+
+
+.items_container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+}
+
+.product{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 30%;
+    border: 1px solid gray;
+    h3{
+        padding-bottom: 10px;
+    }
+    h4{
+        padding-bottom: 10px;
+    }
+    img{
+        width: 80%;
+        height: 80%;
+    }
+}
+
 
 /* Responsive para celular */
 @media (max-width: 768px) {
